wae-homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wae-homepage
  name: wae-homepage
  namespace: wae-homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wae-homepage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wae-homepage
    spec:
      containers:
      - image: willoshu/wae-homepage
        name: httpd
        ports:
        - containerPort: 8080
        resources: {}
status: {}
