wae-homepage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wae-homepage
  name: wae-homepage
  namespace: wae-homepage
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wae-homepage
status:
  loadBalancer: {}
