wae-homepage/testroute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: wae-homepage
    app.kubernetes.io/instance: ocp-argocd-application
  name: wae-homepage
  namespace: wae-homepage
spec:
  host: wae-homepage.apps.ocp.wae.local
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: test
    weight: null
status: {}
